--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -47,7 +47,7 @@
         </article>
     </main>
     <footer>
-        <p>&copy; 2024 TechCon. All rights reserved.</p>
+        <p> &copy; 2024 TechCon. All rights reserved.  Copyright </p>
     </footer>
     
 </body>
