--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>Contact TechCon 2024</h1>
+        <h1>Contact Us</h1>
         <nav>
             
             <a href="index.html">Home</a>
@@ -44,7 +44,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 TechCon. All rights reserved. Copyright</p>
+        <p> &copy; 2024 TechCon. All rights reserved. Copyright</p>
     </footer>
 </body>
 </html>
