--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <h1>Schedule TechCon 2024</h1>
+        <h1>Schedule for TechCon 2024</h1>
         <nav>
             
             <a href="index.html">Home</a>
@@ -66,7 +66,7 @@
         </table>
     </main>
     <footer>
-        <p>&copy; 2024 TechCon. All rights reserved.</p>
+        <p> &copy; 2024 TechCon. All rights reserved.  Copyright </p>
     </footer>
 </body>
 </html>
